--- a/webapp/sfapp/templates/public/accueil.html.twig
+++ b/webapp/sfapp/templates/public/accueil.html.twig
@@ -46,6 +46,17 @@
                 </ul>
 
             </div>
+            <div class="border-l-4 text-center w-1/3"></div>
+
+            <div class="flex flex-col border-l-4 text-center w-1/3 items-center">
+            {# US Technicien : Consulter la liste des systèmes d'acquisition #}
+                <a href="/plan/lister_sa" id="Lister les sysytemes d'aquisition">
+                    <div class="w-64 h-64 flex flex-row justify-center items-center rounded-lg border-2 border-gray-900 shadow-lg">
+                        <box-icon name='stats' class="w-1/3 h-1/3"></box-icon>
+                    </div>
+                    <h2 class="w-64 text-center mt-5 text-xl">Systemes d'acquisition</h2>
+                </a>
+            </div>
         </div>
 
     {# Partie Usager #}
