Correction des incohérences visuelles et optimisation de la route lister_sa

--- a/webapp/sfapp/templates/plan/technicien/liste_sa.html.twig
+++ b/webapp/sfapp/templates/plan/technicien/liste_sa.html.twig
@@ -4,10 +4,10 @@
 
 {% block body %}
     <div class="relative overflow-x-auto max-w-7xl mx-auto">
-        <h1 class="lg:text-4xl text-6xl py-12 text-center">Liste des systèmes d'acquisition</h1>
-        <div class="lg:w-1/6 lg:mr-auto">
+        <h1 class="text-4xl py-12 text-center">Liste des systèmes d'acquisition</h1>
+        <div class="lg:w-1/6 lg:mr-auto mr-6 ml-6">
             {{ form_start(form) }}
-            <select id="option" name="{{ field_name(form.choix) }}" class="form-control w-max lg:text-xl text-4xl bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" onchange='this.form.submit()'>
+            <select id="option" name="{{ field_name(form.choix) }}" class="form-control w-max text-xl bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" onchange='this.form.submit()'>
 
                 {% for label, value in field_choices(form.choix) %}
                     {% if value == defaut %}
@@ -63,7 +63,19 @@
                             {% endif %}
                         </td>
                         <td class="px-6 py-4">
-                            {{ systemeAcquisition.etat }}
+                            {% if systemeAcquisition.etat == 'Installation' %}
+                                <div class="p-1 bg-amber-500 text-white rounded-lg flex flex-row justify-evenly items-center">
+                                    <span>Installation</span>
+                                </div>
+                            {% elseif systemeAcquisition.etat == 'Opérationnel' %}
+                                <div class="p-1 bg-emerald-500 text-white rounded-lg flex flex-row justify-evenly items-center">
+                                    <span>Opérationnel</span>
+                                </div>
+                            {% elseif systemeAcquisition.etat == 'Non installé' %}
+                                <div class="p-1 bg-slate-400 text-white rounded-lg flex flex-row justify-evenly items-center">
+                                    <span>Non installé</span>
+                                </div>
+                            {% endif %}
                         </td>
                     </tr>
                 {% endfor %}
