--- a/webapp/sfapp/templates/plan/technicien/liste_sa.html.twig
+++ b/webapp/sfapp/templates/plan/technicien/liste_sa.html.twig
@@ -67,6 +67,10 @@
                                 <div class="p-1 bg-slate-400 text-white rounded-lg flex flex-row justify-evenly items-center">
                                     <span>Non installé</span>
                                 </div>
+                            {% elseif systemeAcquisition.etat == 'Réparation' %}
+                                <div class="p-1 bg-red-600 text-white rounded-lg flex flex-row justify-evenly items-center">
+                                    <span>Réparation</span>
+                                </div>
                             {% endif %}
                         </td>
                     </tr>
