Correction filtre vue des sa en réparation sur la page lister_sa

--- a/webapp/sfapp/templates/plan/technicien/liste_sa.html.twig
+++ b/webapp/sfapp/templates/plan/technicien/liste_sa.html.twig
@@ -77,7 +77,7 @@
                 {% endfor %}
 
 
-                {% elseif choix == "En cours d'installation" or choix == "Opérationnels"%}
+                {% elseif choix == "En cours d'installation" or choix == "Opérationnels" or choix == "Réparations"%}
                 <tr >
                     <th scope="col" class="px-6 py-3">
                         Nom
