--- a/webapp/sfapp/templates/public/releves.html.twig
+++ b/webapp/sfapp/templates/public/releves.html.twig
@@ -38,25 +38,67 @@
     </div>
     <div class="w-2/3 mx-auto my-12">
         {% if temp_dates is defined and temp_dates is not null and temp_releves is defined and temp_releves is not null %}
-            <div class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6 my-6">
-                <div class="flex justify-between">
+            <div class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6">
+                <div class="flex justify-between mb-5">
                     <div>
                         <h5 class="leading-none text-3xl font-bold text-gray-900 dark:text-white pb-2">Températures</h5>
                         <p class="text-base font-normal text-gray-500 dark:text-gray-400">en °C</p>
                     </div>
-                    <div class="flex items-center px-2.5 py-0.5 text-base font-semibold text-gray-900 dark:text-gray-400 text-center">
-                        N/A %
-                        <svg class="w-3 h-3 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 14">
-                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13V1m0 0L1 5m4-4 4 4"/>
-                        </svg>
+                    {% if temp_diff > 0 %}
+                        <div class="flex items-center px-2.5 py-0.5 text-base font-semibold text-green-500 dark:text-green-400 text-center">
+                            + {{ temp_diff }} °C
+                            <box-icon name='up-arrow-alt' color="#16a34a"></box-icon>
+                        </div>
+                    {% elseif temp_diff < 0 %}
+                        <div class="flex items-center px-2.5 py-0.5 text-base font-semibold text-red-500 dark:text-red-400 text-center">
+                            {{ temp_diff }} °C
+                            <box-icon name='down-arrow-alt' color="#ef4444"></box-icon>
+                        </div>
+                    {% else %}
+                        <div class="flex items-center px-2.5 py-0.5 text-base font-semibold text-gray-900 dark:text-gray-400 text-center">
+                            =
+                        </div>
+                    {% endif %}
+                </div>
+                <div id="data-labels-chart"></div>
+                <div class="grid grid-cols-1 items-center border-gray-200 border-t dark:border-gray-700 justify-between mt-5">
+                    <div class="flex justify-between items-center pt-5">
+                        <a href="https://open-meteo.com/en/docs#latitude=46.1631&longitude=-1.1522&hourly=temperature_2m,relative_humidity_2m&past_days=1&forecast_days=1" class="text-sm font-semibold inline-flex items-center rounded-lg text-blue-600 hover:text-blue-700 dark:hover:text-blue-500  hover:bg-gray-100 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700 px-3 py-2">
+                            Origine des données
+                        </a>
                     </div>
                 </div>
-                <div id="temp-chart"></div>
             </div>
+
             <script>
                 // ApexCharts options and config
                 window.addEventListener("load", function() {
                     let options = {
+                        // enable and customize data labels using the following example, learn more from here: https://apexcharts.com/docs/datalabels/
+                        dataLabels: {
+                            enabled: false,
+                        },
+                        grid: {
+                            show: false,
+                            strokeDashArray: 4,
+                            padding: {
+                                left: 16,
+                                right: 16,
+                                top: -26
+                            },
+                        },
+                        series: [
+                            {
+                                name: "Températures locales",
+                                data: [{% for val in temp_releves %}"{{ val }}"{% if loop.last == false %},{% endif %}{% endfor %}],
+                                color: "#1A56DB",
+                            },
+                            {
+                                name: "Températures extérieures",
+                                data: [{% for val in env_data["temps"] %}"{{ val }}"{% if loop.last == false %},{% endif %}{% endfor %}],
+                                color: "#7F8C8D",
+                            },
+                        ],
                         chart: {
                             height: "100%",
                             maxWidth: "100%",
@@ -75,6 +117,9 @@
                                 show: false,
                             },
                         },
+                        legend: {
+                            show: true
+                        },
                         fill: {
                             type: "gradient",
                             gradient: {
@@ -84,31 +129,12 @@
                                 gradientToColors: ["#1C64F2"],
                             },
                         },
-                        dataLabels: {
-                            enabled: false,
-                        },
                         stroke: {
-                            width: 6,
+                            width: 5,
                         },
-                        grid: {
-                            show: false,
-                            strokeDashArray: 4,
-                            padding: {
-                                left: 2,
-                                right: 2,
-                                top: 0
-                            },
-                        },
-                        series: [
-                            {
-                                name: "Températures",
-                                data: [{% for val in temp_releves %}"{{ val }}"{% if loop.last == false %},{% endif %}{% endfor %}],
-                                color: "#1A56DB",
-                            },
-                        ],
                         xaxis: {
                             categories: [
-                                {% for val in temp_dates %}"{{ val }}"{% if loop.last == false %},{% endif %}{% endfor %}
+                                {% for val in temp_dates %}"{{ val | format_datetime('full', 'short', locale='fr') | title }}"{% if loop.last == false %},{% endif %}{% endfor %}
                             ],
                             labels: {
                                 show: false,
@@ -122,11 +148,16 @@
                         },
                         yaxis: {
                             show: false,
+                            labels: {
+                                formatter: function (value) {
+                                    return value + '°C';
+                                }
+                            }
                         },
                     }
 
-                    if (document.getElementById("temp-chart") && typeof ApexCharts !== 'undefined') {
-                        const chart = new ApexCharts(document.getElementById("temp-chart"), options);
+                    if (document.getElementById("data-labels-chart") && typeof ApexCharts !== 'undefined') {
+                        const chart = new ApexCharts(document.getElementById("data-labels-chart"), options);
                         chart.render();
                     }
                 });
