Retrait de l'idée de l'api météo et finitions

--- a/webapp/sfapp/templates/public/accueil.html.twig
+++ b/webapp/sfapp/templates/public/accueil.html.twig
@@ -48,7 +48,7 @@
 
         {# Partie Usager #}
     {% else %}
-        <h1 class="w-full text-center text-2xl py-20">Bienvenu sur le site Smart Campus</h1>
+        <h1 class="w-full text-center text-2xl py-20">Bienvenue sur le site Smart Campus</h1>
 
         <div class="mx-auto w-3/4 min-h-64 flex flex-row justify-evenly">
             <a href="/releves" id="releves">
