Ajout de placeholders

--- a/webapp/sfapp/templates/plan/charge_de_mission/ajouter_salle.html.twig
+++ b/webapp/sfapp/templates/plan/charge_de_mission/ajouter_salle.html.twig
@@ -23,14 +23,14 @@
 
             <div class="mb-5 mx-5">
                 <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">{{ field_label(formSalle.nom) }}</label>
-                <input id="nom" name="{{ field_name(formSalle.nom) }}" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                <input id="nom" name="{{ field_name(formSalle.nom) }}" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Ex: A000">
                 {{ form_errors(formSalle.nom, {
                     error_item_class: 'text-red-600 text-sm mt-1',
                 }) }}
             </div>
             <div class="mb-5 mx-5">
                 <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">{{ field_label(formSalle.batiment) }}</label>
-                <input id="batiment" name="{{ field_name(formSalle.batiment) }}" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                <input id="batiment" name="{{ field_name(formSalle.batiment) }}" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Ex: Bâtiment A">
                 {{ form_errors(formSalle.batiment, {
                     error_item_class: 'text-red-600 text-sm mt-1',
                 }) }}
