--- a/webapp/sfapp/templates/plan/technicien/liste_sa.html.twig
+++ b/webapp/sfapp/templates/plan/technicien/liste_sa.html.twig
@@ -21,9 +21,13 @@
                 {{ form_end(form) }}
             </div>
 
-                <a href="ajouter_sa" class="lg:w-1/6 lg:ml-auto mr-6 mt-2.5 whitespace-nowrap">
-                    <span class="text-xl bg-gray-50 border border-gray-300 text-gray-900 rounded-lg px-4 py-3 hover:bg-gray-200 hover:cursor-pointer">Ajouter un système</span>
-                </a>
+            <button
+                    type="button"
+                    class="float-right font-bold text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 focus:outline-none"
+                    onclick="window.location.href='/plan/ajouter-sa'"
+            >
+                Ajouter un système
+            </button>
         </div>
     </div>
 
