Finalisation de la modifications des seuils

--- a/webapp/sfapp/templates/public/accueil.html.twig
+++ b/webapp/sfapp/templates/public/accueil.html.twig
@@ -21,6 +21,12 @@
                 </div>
                 <h2 class="w-64 text-center mt-5 text-xl">Plan d'expérimentation</h2>
             </a>
+            <a href="/plan/seuils-alertes" id="seuils_alerte">
+                <div class="w-64 h-64 flex flex-row justify-center items-center rounded-lg border-2 border-gray-900 shadow-lg">
+                    <box-icon name='reflect-horizontal' type='solid' class="w-1/3 h-1/3"></box-icon>
+                </div>
+                <h2 class="w-64 text-center mt-5 text-xl">Seuils d'alertes</h2>
+            </a>
         </div>
 
         {# Partie technicien #}
