--- a/webapp/sfapp/templates/public/releves.html.twig
+++ b/webapp/sfapp/templates/public/releves.html.twig
@@ -32,7 +32,7 @@
             <select name="{{ field_name(form.salle) }}" class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" onchange="this.form.submit()">
                 <option value="" disabled>Choisir une salle</option>
                 {% for label, value in field_choices(form.salle) %}
-                    {% if label == form_selected.nom %}
+                    {% if form_selected is defined and label == form_selected.nom %}
                         <option value="{{ value }}" selected>{{ label }}</option>
                     {% else %}
                         <option value="{{ value }}">{{ label }}</option>
