Ajout de la redirection vers relevés sur l'accueil technicien

--- a/webapp/sfapp/templates/public/accueil.html.twig
+++ b/webapp/sfapp/templates/public/accueil.html.twig
@@ -53,8 +53,15 @@
             <div class="border-l-4 text-center w-1/3"></div>
 
             <div class="flex flex-col border-l-4 text-center w-1/3 items-center">
+            {# US Technicien : Voir les alertes de niveaux et conseils d'action #}
+                <a href="/releves" id="releves">
+                    <div class="w-64 h-64 flex flex-row justify-center items-center rounded-lg border-2 border-gray-900 shadow-lg">
+                        <box-icon name='stats' class="w-1/3 h-1/3"></box-icon>
+                    </div>
+                    <h2 class="w-64 text-center mt-5 text-xl">Relevés</h2>
+                </a>
             {# US Technicien : Consulter la liste des systèmes d'acquisition #}
-                <a href="/plan/lister-sa" id="Lister les sysytemes d'aquisition">
+                <a href="/plan/lister-sa" id="Lister les sysytemes d'aquisition" class="mt-16">
                     <div class="w-64 h-64 flex flex-row justify-center items-center rounded-lg border-2 border-gray-900 shadow-lg">
                         <box-icon name='stats' class="w-1/3 h-1/3"></box-icon>
                     </div>
