--- a/webapp/sfapp/templates/plan/technicien/liste_sa.html.twig
+++ b/webapp/sfapp/templates/plan/technicien/liste_sa.html.twig
@@ -50,6 +50,9 @@
                     <th scope="col" class="px-6 py-3">
                         Etat
                     </th>
+                    <th scope="col" class="px-6 py-3">
+                        Etat des capteurs
+                    </th>
                 </tr>
                 </thead>
                 <thead>
@@ -59,10 +62,18 @@
                             {{ systemeAcquisition.nom }}
                         </th>
                         <td class="px-6 py-4">
-                            {{ systemeAcquisition.Salle.nom|default('-') }}
+                            {% if systemeAcquisition.etat == 'Installation' %}
+                                {{ attribute(listeSalleSaIntall, systemeAcquisition.id).nom|default('-') }}
+                            {% else %}
+                                {{ systemeAcquisition.Salle.nom|default('-') }}
+                            {% endif %}
                         </td>
                         <td class="px-6 py-4">
-                            {{ systemeAcquisition.Salle.Batiment|default('-') }}
+                            {% if systemeAcquisition.etat == 'Installation' %}
+                                {{ attribute(listeSalleSaIntall, systemeAcquisition.id).Batiment|default('-') }}
+                            {% else %}
+                                {{ systemeAcquisition.Salle.Batiment|default('-') }}
+                            {% endif %}
                         </td>
                         <td class="px-6 py-4">
                             {% if systemeAcquisition.etat == 'Installation' %}
@@ -83,6 +94,36 @@
                                 </div>
                             {% endif %}
                         </td>
+                        <td id="etat-capteur" class="px-6 py-4 flex flex-row w-max">
+                            {% if attribute(listeEtatCapteurs, systemeAcquisition.id) is null %}
+                            <p class="my-auto">Non concerné</p>
+                            {% else %}
+                                <div class="flex flex-row">
+                                    <p class="my-auto">Température : </p>
+                                    {% if attribute(attribute(listeEtatCapteurs, systemeAcquisition.id), "temp") == false %}
+                                        <box-icon name='x' color='#ff1d1d' class="my-auto mx-auto"></box-icon>
+                                    {% else %}
+                                        <box-icon name='check' color='#05d409' class="my-auto mx-auto" ></box-icon>
+                                    {% endif %}
+                                </div>
+                                <div class="flex flex-row mx-2">
+                                    <p class="my-auto">Humidité : </p>
+                                    {% if attribute(attribute(listeEtatCapteurs, systemeAcquisition.id), "hum") == false %}
+                                        <box-icon name='x' color='#ff1d1d' class="my-auto mx-auto"></box-icon>
+                                    {% else %}
+                                        <box-icon name='check' color='#05d409' class="my-auto mx-auto" ></box-icon>
+                                    {% endif %}
+                                </div>
+                                <div class="flex flex-row">
+                                    <p class="my-auto">Co2 : </p>
+                                    {% if attribute(attribute(listeEtatCapteurs, systemeAcquisition.id), "co2") == false %}
+                                        <box-icon name='x' color='#ff1d1d' class="my-auto mx-auto"></box-icon>
+                                    {% else %}
+                                        <box-icon name='check' color='#05d409' class="my-auto mx-auto" ></box-icon>
+                                    {% endif %}
+                                </div>
+                            {% endif %}
+                        </td>
                     </tr>
                 {% endfor %}
 
@@ -98,6 +139,11 @@
                     <th scope="col" class="px-6 py-3">
                         Bâtiment
                     </th>
+                    {% if choix == "Opérationnels" %}
+                        <th scope="col" class="px-6 py-3">
+                            Etat des capteurs
+                        </th>
+                    {% endif %}
                 </tr>
                 </thead>
                 <thead>
@@ -108,19 +154,51 @@
                         {{ systemeAcquisition.nom }}
                     </th>
                     <td class="px-6 py-4">
-                        {% if systemeAcquisition.salle is not null %}
-                            {{ systemeAcquisition.Salle.nom }}
+                        {% if systemeAcquisition.etat == 'Installation' %}
+                            {{ attribute(listeSalleSaIntall, systemeAcquisition.id).nom|default('-') }}
                         {% else %}
-                            -
+                            {{ systemeAcquisition.Salle.nom|default('-') }}
                         {% endif %}
                     </td>
                     <td class="px-6 py-4">
-                        {% if systemeAcquisition.salle is not null %}
-                            {{ systemeAcquisition.Salle.Batiment }}
+                        {% if systemeAcquisition.etat == 'Installation' %}
+                            {{ attribute(listeSalleSaIntall, systemeAcquisition.id).Batiment|default('-') }}
                         {% else %}
-                            -
+                            {{ systemeAcquisition.Salle.Batiment|default('-') }}
                         {% endif %}
                     </td>
+                    {% if choix == "Opérationnels" %}
+                        <td id="etat-capteur" class="px-6 py-4 flex flex-row w-max">
+                            {% if attribute(listeEtatCapteurs, systemeAcquisition.id) is null %}
+                                <p class="my-auto">Non concerné</p>
+                            {% else %}
+                                <div class="flex flex-row">
+                                    <p class="my-auto">Température : </p>
+                                    {% if attribute(attribute(listeEtatCapteurs, systemeAcquisition.id), "temp") == false %}
+                                        <box-icon name='x' color='#ff1d1d' class="my-auto mx-auto"></box-icon>
+                                    {% else %}
+                                        <box-icon name='check' color='#05d409' class="my-auto mx-auto" ></box-icon>
+                                    {% endif %}
+                                </div>
+                                <div class="flex flex-row mx-2">
+                                    <p class="my-auto">Humidité : </p>
+                                    {% if attribute(attribute(listeEtatCapteurs, systemeAcquisition.id), "hum") == false %}
+                                        <box-icon name='x' color='#ff1d1d' class="my-auto mx-auto"></box-icon>
+                                    {% else %}
+                                        <box-icon name='check' color='#05d409' class="my-auto mx-auto" ></box-icon>
+                                    {% endif %}
+                                </div>
+                                <div class="flex flex-row">
+                                    <p class="my-auto">Co2 : </p>
+                                    {% if attribute(attribute(listeEtatCapteurs, systemeAcquisition.id), "co2") == false %}
+                                        <box-icon name='x' color='#ff1d1d' class="my-auto mx-auto"></box-icon>
+                                    {% else %}
+                                        <box-icon name='check' color='#05d409' class="my-auto mx-auto" ></box-icon>
+                                    {% endif %}
+                                </div>
+                            {% endif %}
+                        </td>
+                    {% endif %}
                 </tr>
                 {% endfor %}
 
