Fixtures refaites en accord avec les attributions de salles et de sa
Fixtures refaites
Modifications de tests afin de les adapter aux nouvelles fixtures
Modification du tests qui ne fonctionnait pas afin de le faire fonctionner.

--- a/webapp/sfapp/templates/plan/technicien/demande_de_travaux.html.twig
+++ b/webapp/sfapp/templates/plan/technicien/demande_de_travaux.html.twig
@@ -10,12 +10,12 @@
             <div class="ml-6">
                 {{ form_start(formSystemeAcqui) }}
                     <label class="mb-2">{{ field_label(formSystemeAcqui.sa) }}</label>
-                    <select id="option" name="{{ field_name(formSystemeAcqui.sa) }}" class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" onchange='this.form.submit()'>
+                    <select name="{{ field_name(formSystemeAcqui.sa) }}" id="selectSa" class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" onchange='this.form.submit()'>
 
                         {% for label, value in field_choices(formSystemeAcqui.sa) %}
-                         <option value="{{ value }}">{{ label }}</option>
+                         <option id="optionSA" value="{{ value }}">{{ label }}</option>
                         {% endfor %}
-                </select>
+                    </select>
                 {{ form_end(formSystemeAcqui) }}
             </div>
             <div class="mr-6">
